# fubuki

./: .gitignore  Cargo.toml  Cross.toml  README.md  README.zh-CN.md  build.rs  linux-prebuild.sh  protocol.md
.cargo/: config.toml
.github/workflows/: ci.yml  docker-mesh.yml  rust.yml
cfg-example/: README.md  README.zh-CN.md  client-conf.json  dc-alice.json  dc-bob.json  node-conf.json  server-conf.json  use-as-a-lib.c
doc/: README.md  decentralized-architecture.md  decentralized-mvp.md  maturity-roadmap.md
docker/mesh/: Dockerfile  README.md  generate_mesh.py
fubuki-cli/: Cargo.toml  build.rs
fubuki-cli/src/: app.rs  lib.rs  main.rs  node_info_tui.rs  server_info_tui.rs
fubuki-core/: Cargo.toml  build.rs
fubuki-core/src/: context.rs  ffi_export.rs  lib.rs  web.rs
fubuki-core/src/common/: allocator.rs  cipher.rs  hook.rs  privilege.rs
fubuki-core/src/kcp_bridge/: mod.rs
fubuki-core/src/nat/: macos.rs  mod.rs
fubuki-core/src/node/: cross_nat.rs  fake_sys_route.rs  mod.rs  runtime.rs  sys_route.rs  types.rs
fubuki-core/src/routing_table/: hash.rs
fubuki-core/src/server/: mod.rs  pool.rs  tcp.rs  types.rs  udp.rs
fubuki-webui/: README.md  angular.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
fubuki-webui/src/: App.tsx  index.css  index.html  list.json  proxy.conf.json
fubuki-webui/src/api/: client.ts
fubuki-webui/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  fubuki-node.service.spec.ts  fubuki-node.service.ts
fubuki-webui/src/app/fubuki/: fubuki.service.spec.ts  fubuki.service.ts
fubuki-webui/src/app/fubuki/types/: HeartbeatCache.ts  Mode.ts  NodeInfo.ts  NodeInfoListItem.ts  NodeStatus.ts  ServerInfoListItem.ts  UdpStatus.ts
fubuki-webui/src/app/group-item/: group-item.component.html  group-item.component.spec.ts  group-item.component.ts
fubuki-webui/src/app/group-list/: group-list.component.css  group-list.component.html  group-list.component.spec.ts  group-list.component.ts
fubuki-webui/src/app/info-item/: info-item.component.html  info-item.component.spec.ts  info-item.component.ts
fubuki-webui/src/app/info-list/: info-list.component.html  info-list.component.spec.ts  info-list.component.ts
fubuki-webui/src/app/main-container/: main-container.component.html  main-container.component.spec.ts  main-container.component.ts
fubuki-webui/src/components/: CopyChip.tsx  Layout.tsx
fubuki-webui/src/pages/: GroupDetail.tsx  GroupList.tsx
fubuki-webui/src/types/: index.ts
fubuki-webui/src/utils/: format.ts
include/: fubuki.h
scripts/: docker-mesh-test.sh  docker-mesh.sh
src/: app.rs  cli.rs  ffi_export.rs  lib.rs  main.rs  sys_route.rs  web.rs
src/client/: api.rs  mod.rs  nat.rs  route.rs  sys_route.rs
src/common/: allocator.rs  cipher.rs  hook.rs  mod.rs  net.rs  persistence.rs  privilege.rs  proto.rs  rc4.rs  res.rs  routing_table.rs
src/dc/: config.rs  crypto.rs  directory.rs  frame.rs  mod.rs  msg.rs  row_version.rs  runtime.rs  stun.rs
src/kcp_bridge/: mod.rs
src/nat/: linux.rs  macos.rs  windows.rs
src/node/: api.rs  cross_nat.rs  info_tui.rs  mod.rs  nat.rs  packet.rs  routing.rs  runtime.rs  sys_route.rs  types.rs
src/platform/: mod.rs  sys_route.rs
src/platform/tun/: linux.rs  macos.rs  mod.rs  windows.rs
src/routing_table/: array.rs  external.rs  hash.rs  mod.rs
src/server/: api.rs  info_tui.rs  into_tui.rs  mod.rs  tcp.rs  tunnel.rs  types.rs  udp.rs
src/tun/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
