[package]
name = "fubuki"
version = "0.5.9"
authors = ["xty <xutianyi1999@live.com>"]
edition = "2021"

[lib]
# differentiate from bin
name = "fubukil"
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "fubuki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
socket2 = "0.5"
parking_lot = "0.12"
anyhow = "1"
ahash = "0.8"
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }
arc-swap = "1"
human-panic = "2"
hyper = { version = "1", features = ["server", "client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
prettytable-rs = "0.10"
scopeguard = "1"
arrayvec = { version = "0.7", features = ["serde"] }
static-files = { version = "0.2", optional = true }
gethostname = "0.4"
flume = { version = "0.11", default-features = false, features = ["async", "spin"] }
blake3 = "1"
crossbeam-utils = "0.8"
libloading = "0.8"
byte-unit = { version = "5", features = ["serde"] }
linear-map = { git = "https://github.com/contain-rs/linear-map.git" }
mimalloc = { version = "*", default-features = false, optional = true }
netstack-lwip = { git = "https://github.com/xutianyi1999/netstack-lwip.git", optional = true }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
net-route = { git = "https://github.com/johnyburd/net-route.git" }
netconfig = { git = "https://github.com/xutianyi1999/netconfig.git" }
hostsfile = { git = "https://github.com/tonarino/innernet.git" }
klask = { git = "https://github.com/xutianyi1999/klask.git", optional = true }
log4rs = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
tun = { git = "https://github.com/xutianyi1999/rust-tun.git", features = ["async"] }
self_update = { version = "0.40", features = ["archive-tar", "compression-flate2"] }

[target.'cfg(target_os = "windows")'.dependencies]
simple_wintun = { git = "https://github.com/xutianyi1999/SimpleWintun.git", features = ["async"] }
windows = { version = "0.56", features = ["Win32_Networking_WinSock"] }
self_update = { version = "0.40", features = ["archive-zip", "compression-zip-deflate"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[build-dependencies]
static-files = { version = "0.2", optional = true }

[patch.crates-io]
advmac = { git = "https://github.com/xutianyi1999/advmac.git" }

[features]
default = ["mimalloc"]
web = ["static-files"]
gui = ["klask"]
hash-routing-table = []
cross-nat = ["netstack-lwip"]

[profile.release]
lto = true
codegen-units = 1
