[package]
name = "fubuki"
version = "0.5.17"
authors = ["xty <xutianyi1999@live.com>"]
edition = "2021"

[lib]
name = "fubukil"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "fubuki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ahash = "0.8"
parking_lot = "0.12"
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }
human-panic = "2"
bincode = { version = "2", features = ["serde"] }
gethostname = "1"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
aead = "0.5"
uuid = { version = "1", features = ["v4"] }
log4rs = { version = "1", default-features = false, features = ["console_appender"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
mimalloc = { version = "*", default-features = false, optional = true }
dirs = "6"
lru = "0.16"
bytecodec = "0.5"
stun_codec = "0.4"
backon = "1.6.0"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
net-route = { git = "https://github.com/johnyburd/net-route.git" }
netconfig = { git = "https://github.com/xutianyi1999/netconfig.git" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tun = { git = "https://github.com/xutianyi1999/rust-tun.git", features = ["async"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
simple_wintun = { git = "https://github.com/xutianyi1999/SimpleWintun.git", features = ["async"] }
windows = { version = "0.62", features = ["Win32_Networking_WinSock"] }
self_update = { version = "0.42", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["mimalloc"]

[profile.release]
lto = true
codegen-units = 1
