[workspace]
resolver = "2"
members = ["fubuki-core", "fubuki-cli"]

[workspace.package]
version = "0.5.17"
authors = ["xty <xutianyi1999@live.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
socket2 = "0.6"
parking_lot = "0.12"
anyhow = "1"
ahash = "0.8"
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }
arc-swap = "1"
hyper = { version = "1", features = ["server", "client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
bincode = { version = "2", features = ["serde"] }
scopeguard = "1"
arrayvec = { version = "0.7", features = ["serde"] }
gethostname = "1"
flume = { version = "0.12", default-features = false, features = ["async", "spin"] }
blake3 = { version = "1", features = ["pure"] }
crossbeam-utils = "0.8"
libloading = "0.9"
byte-unit = { version = "5", features = ["serde"] }
pathfinding = "4"
stackfuture = "0.3"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29"}
crossterm = { version = "0.28" , features = ["event-stream"] }
human-panic = "2"

[patch.crates-io]
advmac = { git = "https://github.com/xutianyi1999/advmac.git" }
