[package]
name = "fubuki-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "fubuki"
path = "src/main.rs"

[dependencies]
fubuki-core = { path = "../fubuki-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
human-panic = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
log4rs = { version = "1", default-features = false, features = ["console_appender"] }
mimalloc = { version = "*", default-features = false, optional = true }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
klask = { git = "https://github.com/xutianyi1999/klask.git", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "android", target_os = "ios"))'.dependencies]
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[target.'cfg(target_os = "windows")'.dependencies]
self_update = { version = "0.42", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
gui = ["klask"]
web = ["fubuki-core/web"]

