[package]
name = "fubuki-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
ahash = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
arc-swap = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
bincode = { workspace = true }
scopeguard = { workspace = true }
arrayvec = { workspace = true }
gethostname = { workspace = true }
flume = { workspace = true }
blake3 = { workspace = true }
crossbeam-utils = { workspace = true }
libloading = { workspace = true }
byte-unit = { workspace = true }
pathfinding = { workspace = true }
stackfuture = { workspace = true }
linear-map = { git = "https://github.com/contain-rs/linear-map.git" }
kcp = { git = "https://github.com/Matrix-Zhang/kcp.git", features = ["tokio"] }
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip.git", optional = true }
static-files = { version = "0.2", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
log4rs = { version = "1", default-features = false, features = ["console_appender"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
net-route = { git = "https://github.com/johnyburd/net-route.git" }
netconfig = { git = "https://github.com/xutianyi1999/netconfig.git" }
hostsfile = { git = "https://github.com/tonarino/innernet.git" }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "android", target_os = "ios"))'.dependencies]
tun = { git = "https://github.com/xutianyi1999/rust-tun.git", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
simple_wintun = { git = "https://github.com/xutianyi1999/SimpleWintun.git", features = ["async"] }
windows = { version = "0.62", features = ["Win32_Networking_WinSock"] }

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[build-dependencies]
static-files = { version = "0.2", optional = true }

[features]
default = []
web = ["static-files"]
hash-routing-table = []
cross-nat = ["netstack-lwip"]
ffi-export = []

